--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -22,11 +22,20 @@
   until: result is succeeded
   tags: gnucash
 
+- name: rpm --import
+  rpm_key:
+    key: "{{ item.key }}"
+    fingerprint: "{{ item.fingerprint }}"
+    state: "{{ item.state }}"
+  loop: "{{ _rpm_key }}"
+  register: result
+  until: result is succeeded
+  tags: gnucash
+
 - name: yum-config-manager --add-repo
   yum:
     name: "{{ item.name }}"
     state: "{{ item.state }}"
-    disable_gpg_check: true
   loop: "{{ _rpm_repository }}"
   ignore_errors: True
   register: result
