https://github.com/alvistack/ansible-role-podman/issues/5

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -20,5 +20,5 @@
   tasks:
     - name: include role
       ansible.builtin.include_role:
-        name: gnucash
-      tags: gnucash
+        name: alvistack.gnucash
+      tags: alvistack.gnucash
